--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.1.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.15",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "api-query-params": "^5.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "csv-parser": "^3.1.0",
     "handlebars": "^4.7.8",
     "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
